--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 .layout-container {
   margin: 0;
   padding-top: 80px;
-  padding-left: 96px;
+  padding-left: 220px;
   padding-right: 24px;
   background-color: rgb(248, 248, 248);
 }
@@ -22,6 +22,7 @@
   bottom: 0;
   top: 3.438rem;
   background-color: lightgreen;
-  width: 72px;
+  width: 200px;
   padding-top: 5px;
+  z-index: 200;
 }
